Created Booking Form

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,11 @@
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
 
+  <!-- Google Font Link for Icons -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+
+
   <style>
     body {
       background-color: #F9FFFF;
@@ -54,10 +59,14 @@
       width: 100%;
     }
 
-    .input-field:focus{
+    .input-field:focus {
       /* border: 0; */
       border: 1px solid #58BBA6;
       outline: 1px solid #58BBA6;
+    }
+
+    .color-transparent {
+      color: transparent;
     }
   </style>
 
@@ -76,6 +85,12 @@
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
 
+
+
+
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDECJ4Zx4x_Iz5iRSTCvewjuDcaCNmz6l8&loading=async&libraries=places">
+    </script>
 </body>
 
 </html>
