--- a/public/index.html
+++ b/public/index.html
@@ -43,32 +43,7 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 
-
-  <style>
-    body {
-      background-color: #F9FFFF;
-      /* background-color: green; */
-      font-family: 'Poppins', sans-serif !important;
-    }
-
-    .input-field {
-      display: block;
-      border-radius: 6px;
-      border: 1px solid gray;
-      padding: 10px;
-      width: 100%;
-    }
-
-    .input-field:focus {
-      /* border: 0; */
-      border: 1px solid #58BBA6;
-      outline: 1px solid #58BBA6;
-    }
-
-    .color-transparent {
-      color: transparent;
-    }
-  </style>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
