--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <meta name="description" content="Hayame | Talent as a Service" />
   <link rel="stylesheet" href="style.css">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
+  <title>Hayame - Professional Home Services</title>
+  <meta name="description" content="Hayame is one of the best service providers in Malaysia, we provide different services as cleaning, gardening, elderly care, warehouse workers and movers & packers." />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
