--- a/public/index.html
+++ b/public/index.html
@@ -9,22 +9,9 @@
   <meta name="description" content="Hayame | Talent as a Service" />
   <link rel="stylesheet" href="style.css">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
-  <title>Hayame - Professional Home Services</title>
-  <meta name="description" content="Hayame is one of the best service providers in Malaysia, we provide different services as cleaning, gardening, elderly care, warehouse workers and movers & packers." />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+  <title>Hayame - Professional Home Service Provider in Malaysia</title>
+  <meta name="description"
+    content="Hayame is one of the best service providers in Malaysia, we provide different services as cleaning, gardening, elderly care, movers and packers." />
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,6 +33,16 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KH5DWMCF2M"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-KH5DWMCF2M');
+  </script>
 
 
 </head>
