Added seperate title and description to all pages

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <title>Hayame - Professional Home Service Provider in Malaysia</title>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,9 +10,8 @@
   <meta name="description" content="Hayame | Talent as a Service" />
   <link rel="stylesheet" href="style.css">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
-  <title>Hayame - Professional Home Service Provider in Malaysia</title>
   <meta name="description"
-    content="Hayame is one of the best service providers in Malaysia, we provide different services as cleaning, gardening, elderly care, movers and packers." />
+    content="Hayame is one of the best service providers in Malaysia, we provide different services as cleaning, gardening, elderly care, movers and packers." data-rh="true" />
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
